Remove use of Class.newInstance()
This method is deprecated in JDK9+, migrate to its replacement.

Change-Id: Iefd48ecef653fc73f74b2a77ac1ab7891b2575d3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>